--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: apt install yamllint
+        run: sudo apt install -y yamllint
 
       - name: Lint
         run: |
