--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,4 @@ jobs:
         run: sudo apt install -y yamllint
 
       - name: Lint
-        run: |
-          yamllint .
+        run: yamllint .
