--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -2,6 +2,8 @@
 - name: Install common packages
   apt:
     name:
+      - flatpak
+      - gnome-software-plugin-flatpak
       - gnupg
     state: present
   become: true
